feat landing page, refactor page1 code ?

--- a/pages/page1/index.html
+++ b/pages/page1/index.html
@@ -12,9 +12,9 @@
 <body>
     <div class="header">
         <div class="nav">
-            <a href=""><span>HOME</span></a>
-            <a href=""><span>CLORINDE</span></a>
-            <a href=""><span>SIGEWINNE</span></a>
+            <a href="../../index.html"><span>HOME</span></a>
+            <a href="../page1/index.html"><span>CLORINDE</span></a>
+            <a href="../page2/index.html"><span>SIGEWINNE</span></a>
         </div>
     </div>
     
